[metadata]
name = extendable-enum
version = 1.0.1
author = AJ Marasco
author_email = aj.marasco88@gmail.com
description = A utility package for extending, subclassing and reusing Enum classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gweesip/extendable-enum
project_urls =
    Bug Tracker = https://github.com/gweesip/extendable-enum/issues
    Documentation = https://extendable-enum.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
